@@ -1,3 +1,8 @@
+2015-05-29  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* EcAlarmSinkSNMP.m: log SNMP errors via the main logging mechanism
+	or NSLog.
+
 2015-03-26  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Control.plist:
